<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kjs.skywalk.app_android.MainActivity">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_menu"
        android:layout_alignParentEnd="true" >

    </FrameLayout>

    <LinearLayout
        android:id="@+id/tab_menu"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="148px"
        android:background="@drawable/menu_background"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/tv_homepage"
            android:text="@string/tab_menu_homepage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawableTop="@drawable/tab_menu_homepage"
            android:layout_weight="1"
            android:textColor="@drawable/tab_menu_text"
            android:onClick="onTabMenuClick" />

        <TextView
            android:id="@+id/tv_apartment"
            android:text="@string/tab_menu_apartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawableTop="@drawable/tab_menu_apartment"
            android:layout_weight="1"
            android:textColor="@drawable/tab_menu_text"
            android:onClick="onTabMenuClick" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/tv_msg"
                android:text="@string/tab_menu_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:drawableTop="@drawable/tab_menu_msg"
                android:textColor="@drawable/tab_menu_text"
                android:onClick="onTabMenuClick" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_private"
            android:text="@string/tab_menu_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawableTop="@drawable/tab_menu_private"
            android:layout_weight="1"
            android:textColor="@drawable/tab_menu_text"
            android:onClick="onTabMenuClick" />

    </LinearLayout>


</RelativeLayout>
