<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="44">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/left_n" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="380"
            android:background="@drawable/rounded_rect_background_search_gray">

            <TextView
                android:id="@+id/textViewAdvancedSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_search_input_hint"
                android:textSize="14sp"
                android:textColor="#9c9ea5"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/search_n"
                android:paddingLeft="21dp"
                android:drawablePadding="5dp"
                android:onClick="onClickResponse"/>

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#efefef"
                android:queryHint="@string/fragment_search_input_hint"
                android:searchHintIcon="@drawable/search_n"
                android:searchIcon="@drawable/search_n"
                android:visibility="invisible" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="44">

            <ImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/location2_n" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="44">

            <ImageView
                android:id="@+id/imageViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/message_n" />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_height="40dp"
        android:id="@+id/linearLayoutConditionContainer">
        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSearchConditionRegion"
            android:text="@string/fragment_search_condition_region"
            android:textSize="15sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="1" />
        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSearchConditionPrice"
            android:text="@string/fragment_search_condition_price"
            android:textSize="15sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="1" />
        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSearchConditionHouseType"
            android:text="@string/fragment_search_condition_type"
            android:textSize="15sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="1" />
        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSearchConditionFilter"
            android:text="@string/fragment_search_condition_filter"
            android:textSize="15sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="1" />
    </LinearLayout>

    <include layout="@layout/seperator_horizontal"
        android:id="@+id/seperator_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#EFEFEF"
        android:layout_height="40dp"
        android:id="@+id/linearLayoutSortContainer">

        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSortDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:drawableEnd="@drawable/bothway_n"
            android:gravity="center"
            android:text="@string/fragment_search_sort_date"
            android:textColor="#272536"
            android:textSize="13sp" />

        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSortUnitPrice"
            android:text="@string/fragment_search_sort_unit_price"
            android:textSize="13sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/bothway_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="3" />
        <com.kjs.skywalk.control.TextView_DrawableRightCenter
            android:id="@+id/textViewSortTotalPrice"
            android:text="@string/fragment_search_sort_total_price"
            android:textSize="13sp"
            android:textColor="#272536"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/bothway_n"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:layout_weight="3" />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:layout_gravity="center"
            android:background="#E5E5E5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/show_grid"
            android:id="@+id/imageViewDisplayMode"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <include layout="@layout/seperator_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewResult"
        android:gravity="center" >
        <com.kjs.skywalk.control.ListView_NoScroll
            android:id="@+id/listViewSearchResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>
</LinearLayout>